# ModernCppComponent_codecheck

./: .gitignore  64bit.cmake  CMakeLists.txt  README.md  proof.sh
cmake/: ComponentPackageRootConfig.cmake.in  PackageConfig.cmake.in
conan/: conanfile.py  customconan.cmake
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
conan/test_package_default/: conanfile.py  example.cpp
downstream/: CMakeLists.txt
downstream/src/: CMakeLists.txt
downstream/src/apps/consumer/consumer/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/apps/C/C/: CMakeLists.txt  main.cpp
src/apps/gamma/gamma/: CMakeLists.txt  main.cpp
src/apps/tests/tests/: CMakeLists.txt  main.cpp
src/libs/A/A/: CMakeFinds.cmake.in  CMakeLists.txt  FooBar.h  accumulate.cpp  sum.cpp
src/libs/B/B/: CMakeLists.txt  multiply.h
src/libs/alpha/alpha/: CMakeFinds.cmake.in  CMakeLists.txt  FooBar.h  accumulate.cpp  accumulate.h  is_directory.h  sum.h
src/libs/beta/beta/: CMakeLists.txt  Foo.h
